<resources>
    <string name="error">Error</string>
    <string name="txt_exit_app">Exit app?</string>
    <string name="txt_cancel">Cancel</string>
    <string name="txt_delete">Delete</string>
    <string name="txt_exit">Exit</string>
    <string name="txt_confirm_exit_app">Are you sure want to exit?</string>
    <string name="txt_delete_description">Are you sure want to delete?\nThis action can not be undone</string>
    <string name="txt_search">Search</string>
    <string name="txt_loading">Loading…</string>
    <string name="txt_rotate">Rotate</string>
</resources>