<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background_dialog"
    android:paddingVertical="@dimen/medium_padding">

    <com.module.core.view.MyTextView
        android:id="@+id/myTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_delete"
        android:textColor="@color/default_text_color"
        android:textSize="@dimen/extra_big_text_size"
        app:fontWeight="600"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.module.core.view.MyTextView
        android:id="@+id/myTextView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:gravity="center"
        android:text="@string/txt_delete_description"
        android:textColor="@color/default_text_color"
        android:textSize="16sp"
        app:fontWeight="500"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/myTextView" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/default_margin"
        android:layout_marginTop="@dimen/default_margin"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/myTextView2">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bt_delete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_12sdp"
            android:layout_weight="1"
            android:background="@drawable/background_delete_button"
            android:fontFamily="@font/poppins_semi_bold_600"
            android:gravity="center"
            android:paddingVertical="@dimen/_8sdp"
            android:text="@string/txt_delete"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_16sdp"
            tools:ignore="SpUsage" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bt_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_weight="1"
            android:background="@drawable/background_decline_button"
            android:fontFamily="@font/poppins_semi_bold_600"
            android:gravity="center"
            android:paddingVertical="@dimen/_8sdp"
            android:text="@string/txt_cancel"
            android:textAllCaps="false"
            android:textColor="@color/third_text_color"
            android:textSize="@dimen/_16sdp"
            tools:ignore="SpUsage" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>